2003-08-12  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove getndelim2 - it is now in
	LIBOBJ.

2003-07-31  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Remove getpass.c per new getpass-gnu
	API from GNULIB.
	* Makefile: Regenerated.

2003-07-29  Derek Price  <derek@ximbiot.com>

	* getpass.c: New file, almost identical to GNULIB's currect version.
	* Makefile.am (libcvs_a_SOURCES): Add getpass.c.
	* Makefile.in: Regenerated.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* lstat.c: Sync with GNULIB.
	* stat.c: Almost sync'd with GNULIB.

2003-07-25  Derek Price  <derek@ximbiot.com>

	* getline.h: Sync this file with GNULIB.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* getline.c, getline.h, getndelim2.c, getndelim2.h, getnline.c,
	getnline.h: Merge some more changes from GNULIB.

2003-07-24  Derek Price  <derek@ximbiot.com>

	* gethostname.c: Update from GNULIB.

2003-07-23  Derek Price  <derek@ximbiot.com>

	* system.h: Move some includes from src/cvs.h.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* system.h: Assume <stddef.h> per C89.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* strerror.c: Import current version from GNULIB.
	* Makefile.in: Regenerated.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Make a comment more specific about LIBOBJ, while
	removing a list of LIBOBJ'd file maintained elsewhere.
	* memmove.c: Import current version from GNULIB.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* exit.h: Really add this file this time.
	* Makefile.in: Regenerated.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* exit.h: New file from GNULIB.
	* Makefile.am (lib_SOURCES): Add exit.h.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* stat.c: Sync us with GNULIB, except for the xalloc.h requirement.
	xalloc.h is waiting on $GNULIB/modules/error for import.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Add getndelim.c & getnline.c as part of the new API.