@@ -1,3 +1,7 @@
+2003-08-19  Derek Price  <derek@ximbiot.com>
+
+	* system.h: Assume more headers, re C89 & GNULIB.
+
 2003-08-12  Derek Price  <derek@ximbiot.com>
 
 	* Makefile.am (libcvs_a_SOURCES): Remove getndelim2 - it is now in
